--- a/Mvc4MusicStore/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Mvc4MusicStore/Views/Account/ExternalLoginConfirmation.cshtml
@@ -12,23 +12,21 @@
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
-    <fieldset>
+    <fieldset class="form-wrapper">
         <legend>Association Form</legend>
         <p>
             You've successfully authenticated with <strong>@ViewBag.ProviderDisplayName</strong>.
             Please enter a user name for this site below and click the Confirm button to finish
             logging in.
         </p>
-        <ol>
-            <li class="name">
-                @Html.LabelFor(m => m.UserName)
-                @Html.TextBoxFor(m => m.UserName)
-                @Html.ValidationMessageFor(m => m.UserName)
-            </li>
-        </ol>
+        <div class="form-group">
+            @Html.LabelFor(m => m.UserName)
+            @Html.TextBoxFor(m => m.UserName)
+            @Html.ValidationMessageFor(m => m.UserName)
+        </div>
         @Html.HiddenFor(m => m.ExternalLoginData)
-        <input type="submit" value="Register" />
-    </fieldset>
+        <input type="submit" class="btn btn-primary" value="Register" />
+</fieldset>
 }
 
 @section Scripts {
