--- a/Mvc4MusicStore/Views/ShoppingCart/CartSummary.cshtml
+++ b/Mvc4MusicStore/Views/ShoppingCart/CartSummary.cshtml
@@ -1,4 +1,4 @@
 ﻿@Html.ActionLink("Cart (" + ViewData["CartCount"] + ")",
     "Index",
-    "ShoppingCart",
+    null,
     new { id = "cart-status" })
