--- a/Mvc4MusicStore/Views/StoreManager/Delete.cshtml
+++ b/Mvc4MusicStore/Views/StoreManager/Delete.cshtml
@@ -2,14 +2,14 @@
 @{
     ViewBag.Title = "Delete";
 }
-<h2>Delete Confirmation</h2>
+<h3>Delete Confirmation</h3>
 <p>
     Are you sure you want to delete the album titled
     <strong>@Model.Title</strong>?
 </p>
 @using (Html.BeginForm()) {
     <p>
-        <input type="submit" value="Delete" />
+        <input type="submit" class="btn btn-primary" value="Delete" />
     </p>
     <p>
         @Html.ActionLink("Back to List", "Index")
