--- a/Mvc4MusicStore/Views/Account/_ChangePasswordPartial.cshtml
+++ b/Mvc4MusicStore/Views/Account/_ChangePasswordPartial.cshtml
@@ -6,22 +6,19 @@
     @Html.AntiForgeryToken()
     @Html.ValidationSummary()
 
-    <fieldset>
-        <legend>Change Password Form</legend>
-        <ol>
-            <li>
-                @Html.LabelFor(m => m.OldPassword)
-                @Html.PasswordFor(m => m.OldPassword)
-            </li>
-            <li>
-                @Html.LabelFor(m => m.NewPassword)
-                @Html.PasswordFor(m => m.NewPassword)
-            </li>
-            <li>
-                @Html.LabelFor(m => m.ConfirmPassword)
-                @Html.PasswordFor(m => m.ConfirmPassword)
-            </li>
-        </ol>
-        <input type="submit" value="Change password" />
-    </fieldset>
+    <div class="form-wrapper">
+        <div class="form-group">
+            @Html.LabelFor(m => m.OldPassword)
+            @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.NewPassword)
+            @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.ConfirmPassword)
+            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+        </div>
+        <input type="submit" value="Change password" class="btn btn-primary" />
+    </div>
 }
