--- a/Mvc4MusicStore/Views/Account/_RemoveExternalLoginsPartial.cshtml
+++ b/Mvc4MusicStore/Views/Account/_RemoveExternalLoginsPartial.cshtml
@@ -18,7 +18,7 @@
                             <div>
                                 @Html.Hidden("provider", externalLogin.Provider)
                                 @Html.Hidden("providerUserId", externalLogin.ProviderUserId)
-                                <input type="submit" value="Remove" title="Remove this @externalLogin.ProviderDisplayName credential from your account" />
+                                <input type="submit" class="btn btn-primary" value="Remove" title="Remove this @externalLogin.ProviderDisplayName credential from your account" />
                             </div>
                         }
                     }
