--- a/Mvc4MusicStore/Views/Account/_SetPasswordPartial.cshtml
+++ b/Mvc4MusicStore/Views/Account/_SetPasswordPartial.cshtml
@@ -9,18 +9,16 @@
     @Html.AntiForgeryToken()
     @Html.ValidationSummary()
 
-    <fieldset>
-        <legend>Set Password Form</legend>
-        <ol>
-            <li>
-                @Html.LabelFor(m => m.NewPassword)
-                @Html.PasswordFor(m => m.NewPassword)
-            </li>
-            <li>
-                @Html.LabelFor(m => m.ConfirmPassword)
-                @Html.PasswordFor(m => m.ConfirmPassword)
-            </li>
-        </ol>
-        <input type="submit" value="Set password" />
-    </fieldset>
+    <div class="form-wrapper">
+        <h3>Set Password</h3>
+        <div class="form-group">
+            @Html.LabelFor(m => m.NewPassword)
+            @Html.PasswordFor(m => m.NewPassword)
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.ConfirmPassword)
+            @Html.PasswordFor(m => m.ConfirmPassword)
+        </div>
+        <input type="submit" class="btn btn-primary" value="Set password" />
+    </div>
 }
