--- a/Mvc4MusicStore/Views/StoreManager/Edit.cshtml
+++ b/Mvc4MusicStore/Views/StoreManager/Edit.cshtml
@@ -4,17 +4,14 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h3>Edit album</h3>
 
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
-    <fieldset>
-        <legend>Album</legend>
-
+    <div class="form-wrapper">
         @Html.HiddenFor(model => model.AlbumId)
-
         <div class="editor-label">
             @Html.LabelFor(model => model.GenreId, "Genre")
         </div>
@@ -22,7 +19,6 @@
             @Html.DropDownList("GenreId", String.Empty)
             @Html.ValidationMessageFor(model => model.GenreId)
         </div>
-
         <div class="editor-label">
             @Html.LabelFor(model => model.ArtistId, "Artist")
         </div>
@@ -30,7 +26,6 @@
             @Html.DropDownList("ArtistId", String.Empty)
             @Html.ValidationMessageFor(model => model.ArtistId)
         </div>
-
         <div class="editor-label">
             @Html.LabelFor(model => model.Title)
         </div>
@@ -38,7 +33,6 @@
             @Html.EditorFor(model => model.Title)
             @Html.ValidationMessageFor(model => model.Title)
         </div>
-
         <div class="editor-label">
             @Html.LabelFor(model => model.Price)
         </div>
@@ -46,7 +40,6 @@
             @Html.EditorFor(model => model.Price)
             @Html.ValidationMessageFor(model => model.Price)
         </div>
-
         <div class="editor-label">
             @Html.LabelFor(model => model.AlbumArtUrl)
         </div>
@@ -54,11 +47,8 @@
             @Html.EditorFor(model => model.AlbumArtUrl)
             @Html.ValidationMessageFor(model => model.AlbumArtUrl)
         </div>
-
-        <p>
-            <input type="submit" value="Save" />
-        </p>
-    </fieldset>
+        <input type="submit" class="btn btn-primary" value="Save" />
+    </div>
 }
 
 <div>
