--- a/Mvc4MusicStore/Views/UserManager/Index.cshtml
+++ b/Mvc4MusicStore/Views/UserManager/Index.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Manage Users";
 }
 <h2>@ViewBag.Title</h2>
-<table>
+<table class="table table-striped">
     <tr><th>User Name</th><th></th></tr>
     @foreach (var userName in Model)
     {
