As appropriate, update views to include links to the Okta API
Additionally:
- Fixed issue with registering new users
- Updated csproj to include new assets

--- a/Mvc4MusicStore/Views/Account/Login.cshtml
+++ b/Mvc4MusicStore/Views/Account/Login.cshtml
@@ -30,8 +30,17 @@
     <p>
         @Html.ActionLink("Register", "Register") if you don't have an account.
     </p>
+
+    <br /><br /><br />
     <p>
+        <i class="fa fa-info-circle"></i>
         Try an example <a href="https://musicstore-dev-ed.my.salesforce.com/_ui/core/chatter/groups/GroupProfilePage?g=0F9j0000000Lz5C">"deep link"</a> to Chatter.
+    </p>
+    <p class="api-tip">
+        <i class="fa fa-hand-o-right"></i>
+        <a href="http://developer.okta.com/docs/api/rest/authn.html#primary-authentication">
+            This page authenticates users with Okta using the <code>/authn</code> Okta API endpoint.
+        </a>
     </p>
 }
 </section>
