--- a/Mvc4MusicStore/Views/Account/Register.cshtml
+++ b/Mvc4MusicStore/Views/Account/Register.cshtml
@@ -36,6 +36,14 @@
         </div>
     <input type="submit" class="btn btn-primary" value="Register" />
     </div>
+
+    <br /><br /><br />
+    <p class="api-tip">
+        <i class="fa fa-hand-o-right"></i>
+        <a href="http://developer.okta.com/docs/api/rest/users.html#create-user-with-password">
+            This page creates users with Okta using the <code>/users</code> Okta API endpoint.
+        </a>
+    </p>
 }
 
 @section Scripts {
