--- a/Mvc4MusicStore/Views/Shared/_Layout.cshtml
+++ b/Mvc4MusicStore/Views/Shared/_Layout.cshtml
@@ -4,7 +4,8 @@
         <meta charset="utf-8" />
         <title>@ViewBag.Title</title>
         <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400|Lobster|Vollkorn' rel='stylesheet' type='text/css'>
+        <link href='//fonts.googleapis.com/css?family=Open+Sans:300,400|Lobster|Vollkorn' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
         <meta name="viewport" content="width=device-width" />
         @Styles.Render("~/Content/bootstrap.min.css", "~/Content/Site.css", "~/Content/forms.css")
         @Scripts.Render("~/bundles/modernizr")
