--- a/Mvc4MusicStore/Views/UserManager/Index.cshtml
+++ b/Mvc4MusicStore/Views/UserManager/Index.cshtml
@@ -17,3 +17,11 @@
         </tr>
     }
 </table>
+
+<br /><br /><br />
+<p class="api-tip">
+    <i class="fa fa-hand-o-right"></i>
+    <a href="http://developer.okta.com/docs/api/rest/users.html#list-users">
+        This page gets a list of users from Okta using the <code>/users</code> Okta API endpoint.
+    </a>
+</p>
