--- a/Mvc4MusicStore/Views/GroupManager/Index.cshtml
+++ b/Mvc4MusicStore/Views/GroupManager/Index.cshtml
@@ -30,3 +30,11 @@
     }
 
 </table>
+
+<br /><br /><br />
+<p class="api-tip">
+    <i class="fa fa-hand-o-right"></i>
+    <a href="http://developer.okta.com/docs/api/rest/groups.html#list-groups">
+        This page gets a list of groups from Okta using the <code>/groups</code> Okta API endpoint.
+    </a>
+</p>
