--- a/Mvc4MusicStore/Views/Mfa/Verify.cshtml
+++ b/Mvc4MusicStore/Views/Mfa/Verify.cshtml
@@ -15,6 +15,15 @@ else
     <div>The MVC Music Store doesn't support that token type yet.</div>
 }
 
+
+<br /><br /><br />
+<p class="api-tip">
+    <i class="fa fa-hand-o-right"></i>
+    <a href="http://developer.okta.com/docs/api/rest/authn.html#verify-factor">
+        This page is verifying MFA with Okta using the <code>/authn</code> Okta API endpoint.
+    </a>
+</p>
+
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
