--- a/Mvc4MusicStore/Views/Checkout/AddressAndPayment.cshtml
+++ b/Mvc4MusicStore/Views/Checkout/AddressAndPayment.cshtml
@@ -24,7 +24,7 @@
         </div>
     </fieldset>
 
-    input type="submit" value="Submit Order" />
+    <input type="submit" value="Submit Order" />
 }
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
